Rename `logus` into `crates` Add base packages into workspace dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [workspace]
-members = ["logus/*"]
+members = ["crates/*"]
 resolver = "3"
 
 [workspace.package]
 version = "0.1.0"
 edition = "2024"
+
+[workspace.dependencies]
+logus-core = { path = "crates/logus-core" }
+logus-parser = { path = "crates/logs-parser" }
